--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ h1, h2, h3, h4, h5, h6, h7 {
 			transition: all .1s ease-in-out;
 }
 
-video {
+.video-preview {
     width:150px;
     height:150px;
     overflow:hidden;
